# xlerobot-hackathon

./: .gitignore  .gitmodules  CLAUDE.md  PROGRESS.md  README.md  event.md  mkdocs.yml  requirements.txt  zensical.toml
backend/: inference.py  main.py  molmo_robot_bridge.py
backend/api/: base_control.py  calibration.py  config.py  debug.py  huggingface.py  inference.py  recording.py  setup.py  system.py  teleoperation.py
backend/models/: config.py  debug.py  inference.py
backend/services/: base_control.py  calibration_service.py  camera_scanner.py  config_manager.py  hf_service.py  port_scanner.py  process_manager.py
backend/websockets/: base_control.py  (+2 more)
frontend/: .gitignore  ideas.pen  package.json
hackathon-hub/: index.html
molmoact-interface/: README.md
orchestrator/: ask.py  chat.py  molmoact2_runner.py  orchestrator.py  smoke_test.py  watch.py  watcher.py
runbook/: 01_bootstrap_pod.sh  02_train_act.sh  02_train_smolvla.sh  03_check_status.sh  04_inference.md  RUNBOOK.md
scripts/: deploy_bore_tunnel.sh  deploy_gemma_proxy.sh  deploy_orchestrator.sh  kite.cmd  kite.py  mm.cmd  mm.py  probe_ports.py  reassign_motor_ids.py  record_demo.cmd  record_skill.sh  rotate_gemma_token.sh  run_demo.cmd  train_skill.sh  viz_dataset.sh
skills/: skills.yaml
voice/: .env.example  .gitignore  README.md  SETUP_MATTIE.md  __init__.py  agent.py  config.py  pyproject.toml  run-server.cmd  server.py  start-server.py  tools.py  vapi-bootstrap.py
voice/tests/: test_config.py  test_tools.py
wiki/: data-collection-plan.md  demo-pitch.md  demo-voiceover.md  index.md  team-gemma-access.md  training-plan.md
(+25 files in other folders)
