[project]
name = "xlerobot-voice"
version = "0.1.0"
description = "Phone-call voice frontend for the xlerobot-hackathon orchestrator. Caller speaks; Gemma 4 sees the camera, picks a trained per-skill VLA from skills.yaml, narrates while lerobot-record drives the arm."
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    # Pipecat voice pipeline. OpenAI service points at our Gemma proxy
    # (Ollama OpenAI-compatible /v1 endpoint) via OLLAMA_BASE_URL.
    "pipecat-ai[twilio,deepgram,openai,elevenlabs,silero]>=0.0.50,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "loguru>=0.7,<1.0",
    # orchestrator already pulls these; we restate so pip resolves cleanly.
    "opencv-python>=4.8,<5.0",
    "requests>=2.31,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
xlerobot-voice = "voice.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat layout: the voice/ directory contains pyproject.toml AND __init__.py.
# Tell setuptools that the `voice` package IS this directory (not a subdir),
# and that `voice.tests` lives in tests/.
[tool.setuptools]
packages = ["voice", "voice.tests"]

[tool.setuptools.package-dir]
"voice" = "."
"voice.tests" = "tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
